# Build tests
add_executable(tests
  tests.cpp
  vec2.cpp
  color.cpp
  circle.cpp
  )

# Build aufgabe_2_und_3
add_executable(aufgabe_2_und_3
  aufgabe_2_und_3.cpp
  vec2.cpp
  circle.cpp
  color.cpp
  )

# Build aufgabe_6
add_executable(aufgabe_6
  aufgabe_6.cpp
  circle.cpp
  vec2.cpp
  color.cpp
  )

# Build aufgabe_9
add_executable(aufgabe_9
  aufgabe_9.cpp
  )

# Build aufgabe_11
add_executable(aufgabe_11
  aufgabe_11.cpp
  )